[package]
name = "osmrest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.2.8"
structopt = "0.3.25"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
rusqlite = { version = "0.27.0", features = ["bundled", "load_extension"] }
warp = "0.3.2"
tokio = { version = "1", features = ["full"] }
